@@ -9,3 +9,4 @@ ATA mode is now used by default on CentOS and Redhat Enterprise versions 5 and a
 ---- Changes since 1.440 ----
 SCSI drives are visible in the System and Server Status module.
 The SMART status monitor now has an option to only alert if the error count on a drive has increased.
+Improved support for 3ware drives, so that the underlying disks are now detected and can be reported on separately.
